# ChangeLog for dev-ruby/simple-rss
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  06 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import
