@@ -1,3 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST simple-rss-1.2.2.gem 31744 RMD160 8936fdb510a6610767e81ca7677aaf45df13a532 SHA1 29d9a6fd4b0ffb9a7446f86a097ea4e14d9f926d SHA256 f47184081e8c3e7752e156094e4736800330bcb1a5aa0c0d1f927c74199c40d3
 DIST simple-rss-1.2.gem 31232 RMD160 321dbe2e42ec720865b6aa88e09a6e11f69d5568 SHA1 4b669bf6f8e60ef7a1519d520f261e3e85dddce0 SHA256 f24a034d4d6c98367d5240eb9bcdeb71df6078516a615ada4210ea58538a089b
+EBUILD simple-rss-1.2.2.ebuild 511 RMD160 9a46cc55f860c5e433568e538c6caf20cbbddfb6 SHA1 9ca635492196a26299c89c8656c762222e1c87db SHA256 336fe90a208850abd73dd7b6be98b255723b1870ed2f2357081786555a719628
 EBUILD simple-rss-1.2.ebuild 440 RMD160 56eae03df541da11bfc87af383f11969c3125471 SHA1 719469336e2a8f30fd85f46dfd1b7d3b2f44f20a SHA256 cd2e48bd4888806a44bd7346534ecdf35ade6f7dd762e0925598724fc01dfaad
-MISC ChangeLog 186 RMD160 ff3a397fd45e1f254ed60a3a3aeaaa1dfbbfbaa4 SHA1 389adcef1f75d7c9b419333e04a8d666d18e84e8 SHA256 0614f35521a9c60b704c3d90873b62489fee76c7f7b67b6d8f402533a11d7b12
+MISC ChangeLog 336 RMD160 4fb07955348db62e9755478ed050b847beca0c22 SHA1 e2af128b376d3f7afbff900f623c786f27afe152 SHA256 b3ebe7cf4ac58d9b98fee2a5b3ea985e195b784c784a2bc3e009468ae60f8fb5
+MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAksopL0ACgkQeM7EJeUH71M6cQCfVkPTP/fOGA2QqWH6XAE9Z+KM
+c/QAnileTZ9O86ja4RxualnLv+0JDPdN
+=cT6v
+-----END PGP SIGNATURE-----
