@@ -1,0 +1,21 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
+
+EAPI=2
+USE_RUBY="ruby18"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Simple RSS is a simple, flexible, extensible, and liberal RSS and
+Atom reader for Ruby."
+HOMEPAGE="http://simple-rss.rubyforge.org/"
+LICENSE="LGPL-2"
+
+KEYWORDS="~x86 ~amd64"
+SLOT="0"
+IUSE=""
+
+all_ruby_install() {
+	dodoc README
+}
