@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/simple-rss
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+*simple-rss-1.2.2 (16 Dec 2009)
+
+  16 Dec 2009; Hans de Graaff <graaff@gentoo.org> +simple-rss-1.2.2.ebuild:
+  Version bump. Switch to ruby-fakegem.
+
   06 Mar 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Initial import
 
